--- a/coder/index.html
+++ b/coder/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="output.css">
         <title>EUROAQUA PLUMTEK CATALOGUE</title>
-        <link rel="shortcut icon" href="src/Banner-image-About-us-scaled.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="logo.png" type="image/x-icon">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://cdn.tailwindcss.com"></script>
